--- a/src/Css/Login.css
+++ b/src/Css/Login.css
@@ -5,5 +5,10 @@
   left: 0;
   right: 0;
   margin: auto;
-  height: 50%;
+  display: flex;
+  align-items: center;
+  flex-direction: row;
+}
+.col{
+  flex: 1;
 }
